Add location details backend setup
